--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -89,6 +89,7 @@
 	11/20/12 & <1.3> & Added a script to generate tex from our codes, and found a way to include those in the document. & chathaway\\  \hline
 	11/28/12 & <1.4> & Added a Revision History table. & gdegeus \\ \hline
 	11/29/12 & <1.5> & Added Non-functional Requirements section, added glossary section, re-arranged document layout, updated Introduction, index and Acronyms section. & gdegeus \\  \hline
+	11/29/12 & <1.6> & Completed the Non-functional Requirements  section.  & gdegeus  \\  \hline
 	~    & ~       & ~           & ~      \\  \hline
     \end{tabular}
 
