Fixed the code viewing stuff... Please don't mess with the files under "codes"
Corrected a problem with the encoding in "Add-Satellite.tex"


git-svn-id: svn://dunari.cis.vtc.edu/POWER@185 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Use-Cases/Add-Satellite.tex
+++ b/Documents/Design/Use-Cases/Add-Satellite.tex
@@ -26,7 +26,7 @@ The display shows the user the "Satellite Management" page
 	\item This includes an "Add Satellite" button
 \end{itemize}
 The user clicks the "Add Satellite" button\\
-The display prompts the user to press the “Connect” button on the Satellite and then click "OK"\\
+The display prompts the user to press the "Connect" button on the Satellite and then click "OK"\\
 The user presses the "Connect" button on the Satellite\\
 The display informs the user that it's searching\\
 The display then displays the serial number (xxx-xxx) of the connected Satellite\\
