--- a/Documents/Design/codes/device/models.py.tex
+++ b/Documents/Design/codes/device/models.py.tex
@@ -101,12 +101,12 @@
 
 \section*{}
 
-\begin{verbatim}[commandchars=\\\{\},numbers=left,firstnumber=1,stepnumber=1]
+\begin{Verbatim}[commandchars=\\\{\},numbers=left,firstnumber=1,stepnumber=1]
 \PY{k+kn}{from} \PY{n+nn}{django.db} \PY{k+kn}{import} \PY{n}{models}
 
 \PY{k}{class} \PY{n+nc}{Device}\PY{p}{(}\PY{n}{models}\PY{o}{.}\PY{n}{Model}\PY{p}{)}\PY{p}{:}
 	\PY{n}{name} \PY{o}{=} \PY{n}{models}\PY{o}{.}\PY{n}{CharField}\PY{p}{(}\PY{n}{max\PYZus{}length}\PY{o}{=}\PY{l+m+mi}{500}\PY{p}{)}
 	
-\end{verbatim}
+\end{Verbatim}
 
 \end{document}
