--- a/Documents/Design/pygmentize.tex
+++ b/Documents/Design/pygmentize.tex
@@ -1,3 +1,8 @@
+\usepackage{fancyvrb}
+\usepackage{color}
+\usepackage[ascii]{inputenc}
+
+
 
 \makeatletter
 \def\PY@reset{\let\PY@it=\relax \let\PY@bf=\relax%
@@ -88,3 +93,4 @@
 \def\PYZlb{[}
 \def\PYZrb{]}
 \makeatother
+
