Added list of use cases.
git-svn-id: svn://dunari.cis.vtc.edu/POWER@186 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Use-Cases/Remove-Satellite.tex
+++ b/Documents/Design/Use-Cases/Remove-Satellite.tex
@@ -1,4 +1,4 @@
-\section{Removeing a Satellite}
+\section{Removing a Satellite}
 
 This use case documents the procedure that a user would use to remove a Satellite with the display.
 
