--- a/Documents/Design/Use-Cases/overview.tex
+++ b/Documents/Design/Use-Cases/overview.tex
@@ -20,6 +20,23 @@ The "Procedure" describes the procedure that is taken to by the user to accompli
 
 The "Expected Outcome" is the ultimate goal. 
 It is what the user expects to happen after they execute the procedure. 
-These can be visual outputs, stored data, or even changes to the way the system behaves.
+These can be visual outputs, stored data, or even changes to the way the system behaves.\\
 
-
+Listed below are all following Use Cases in order.
+\begin{itemize}
+	\item Logging In
+	\item Logging Out
+	\item View Monthly Power Consumption
+	\item View Largest Power Consumer
+	\item View Power Consumption Over Time
+	\item Adjust Power Cost
+	\item Add User
+	\item Delete User
+	\item Add Device
+	\item Rename Device
+	\item Disable Device
+	\item Re-enable Device
+	\item Remap Device
+	\item Adding a Satellite
+	\item Removing a Satellite
+\end{itemize}
