Started adding the code segments.
git-svn-id: svn://dunari.cis.vtc.edu/POWER@187 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Software/Backend-Authentication.tex
+++ b/Documents/Design/Software/Backend-Authentication.tex
@@ -41,3 +41,9 @@ Another problem that might be common is the difficulty in expanding on the user 
 This will not be a problem for us because Django did such a good job in keeping their framework extensible.
 All we need to do is declare a OneToOneField in our model, and add a few panels to the administrative interface and we will have an instant user profile.
 Not only that, but we will have successfully separated user information from the authentication information, which is considered good practice as it is faster and more secure.
+
+\subsubsection{Objects}
+
+The objects for the authentication section are completely managed by Django. 
+Therefore, we will not be documenting these.
+If you are curious, please see the Django project for more information (\url{https://www.djangoproject.com/}).
