Added a Design Overview section, added a system architecture diagram (up for removal if it is wrong/bad), finished Introduction. Other odds and ends.
git-svn-id: svn://dunari.cis.vtc.edu/POWER@190 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Introduction.tex
+++ b/Documents/Design/Introduction.tex
@@ -2,8 +2,15 @@
 
 \section{Purpose of this Document}
 This document describes the low level design of all components of the \ac{POW-R} system.
+The purpose of the  Design Document is to provide a description of the design of a system
+fully enough to allow for software development to proceed with an understanding of what is to be
+built and how it is expected to built.  This document provides information
+necessary to provide description of the details for the software and system to be built.
 
 \section{Scope}
-The scope of this document includes but is not limited to: 
+This Design Document is for a base level system which will work as a proof of concept for
+the use of building a system the provides a base level of functionality to show feasibility for large
+scale production use.  This Design is focused on the base level system and critical parts
+of the system.
 
 
