--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -83,12 +83,14 @@
     \begin{tabular}{|p{50pt}|p{50pt}|p{200pt}|p{50pt}|}
 	\hline
 	Date & Version & Description & Author\\  \hline
+	11/09/12 & ~         &  Updated acronym from POWER to POW-R as the word "Energy" has the incorrect units of measure for our project. & ~      \\  \hline
 	11/09/12 & <1.0> & Original version of this document & \\  \hline
 	11/13/12 & <1.1> & Added a bibliography & chathaway\\  \hline
 	11/19/12 & <1.2> & Added and formatted all use cases & gdegeus\\  \hline
 	11/20/12 & <1.3> & Added a script to generate tex from our codes, and found a way to include those in the document. & chathaway\\  \hline
 	11/28/12 & <1.4> & Added a Revision History table. & gdegeus \\ \hline
 	11/29/12 & <1.5> & Added Non-functional Requirements section, added glossary section, re-arranged document layout, updated Introduction, index and Acronyms section. & gdegeus \\  \hline
+	11/29/12 & <1.6> & Completed the Non-functional Requirements  section.  & gdegeus  \\  \hline
 	~    & ~       & ~           & ~      \\  \hline
     \end{tabular}
 
@@ -188,6 +190,9 @@
 \input{Use-Cases/Remove-Satellite}
 \newpage
 
+%Design Overview
+\input{Design-Overview}
+\newpage
 
 % Hardware design
 \input{Hardware/overview}
