--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -128,7 +128,7 @@
 	\acro{HTML}{HyperText Markup Language}
 	\acro{HTTP}{Hypertext Transfer Protocol}
 	\acro{IEEE}{Institute of Electrical and Electronics Engineers}
-	\acro{IP}{Internat Protocol}
+	\acro{IP}{Internet Protocol}
 	\acro{JSON}{JavaScript Object Notation}
 	\acro{LCD}{Liquid Crystal Display}
 	\acro{M}{Meters}
@@ -150,7 +150,9 @@
 	\acro{XSS}{Cross-site scripting}
 	\acro{YAML}{YAML Ain't Markup Language}
 \end{acronym}
-\section{Definitions}
+
+\input{definitions}
+
 \newpage
 
 %Glossary
