Added some definitions for the Actors, and to give a definition of Satellite before it is used in the document.
git-svn-id: svn://dunari.cis.vtc.edu/POWER@193 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Use-Cases/overview.tex
+++ b/Documents/Design/Use-Cases/overview.tex
@@ -9,9 +9,19 @@ The "Actors" section describes the things that will play a role in this scenario
 These can include:
 \begin{itemize}
 	\item Users
-	\item The display
+	\item The Display
 	\item The Satellite
 \end{itemize}
+
+\paragraph{Users}
+The Users are any customer who has permission to access the Display or add and remove Satellites.
+
+\paragraph{The Display}
+In terms of the User, the Display is the web page that the User accesses in their web browser.
+
+\paragraph{The Satellite}
+The Satellites are the outlett nodes that devices are plugged into. These are the gadgets that will measure the power usage of each device. 
+
 
 The "Assumptions" section describes assumptions that are made for this scenario. 
 These include things such as "User is logged in", or "Several Satellites are connected".\\
