git-svn-id: svn://dunari.cis.vtc.edu/POWER@208 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Hardware/Server-Addons.tex
+++ b/Documents/Design/Hardware/Server-Addons.tex
@@ -1,10 +1,9 @@
 %% Template file for all Software/Hardware modules
 
-\subsection{Add-Ons}
+\subsection{Server Hardware Additions}
+
 The Server provides for the computational needs of the \ac{POW-R} project; 
 more hardware shall be added before the utility needs of the project are met.
-
-\subsection{Server Hardware IO}
 
 \subsubsection{\ac{IP} Display}
 The \ac{IP} of the Server shall be displayed somewhere on it's casing. 
