--- a/Documents/Design/Hardware/Server-TalkToXBee.tex
+++ b/Documents/Design/Hardware/Server-TalkToXBee.tex
@@ -17,9 +17,4 @@ In regards to the Server, the coordinator stands out in the following ways:
 	\item Receives commands from the Server
 \end{itemize}
 
-The coordinator communicates to the Server using serial protocol over USB cable. 
-
-% The Server's only connection to the Mesh is
-% the coordinator ZigBee. That's the Master
-% node in this configuration. It talks over
-% serial (USB) to the Server, sending data.
+The coordinator communicates to the Server using serial protocol over a \ac{USB} cable.
