git-svn-id: svn://dunari.cis.vtc.edu/POWER@209 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Hardware/overview.tex
+++ b/Documents/Design/Hardware/overview.tex
@@ -35,3 +35,4 @@ However, it should be noted that prototyping will most likely involve all of the
 \input{Hardware/Satellite-Hardware}
 \input{Hardware/Satellite-ZigBee}
 \input{Hardware/Satellite-Problems}
+\input{Hardware/Satellite-Prototyping}
