git-svn-id: svn://dunari.cis.vtc.edu/POWER@210 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Hardware/Satellite-Prototyping.tex
+++ b/Documents/Design/Hardware/Satellite-Prototyping.tex
@@ -1,17 +1,21 @@
 %% Template file for all Software/Hardware modules
 
 % Replace "Name of Module" with the name of this module
-\chapter{Name of Module}
+\chapter{Satellite Prototype}
 
 \section{Description}
 
 % Insert a description of the module here. This should include:
 %  * The module's purpose
+The purpose of the Satellite is to measure and transmit the voltage present at
+the mains electricity and the amount of current being drawn on the particular outlet that
+the Satellite is plugged into.
 %  * Why the module is done this way
 
 \section{Circuit Diagrams}
 
 % This should consist of all the relevant circuit diagrams
+\includegraphics[scale=0.3]{Hardware/images/MeasureCircuit.png}
 
 \section{Potential Problems}
 
