git-svn-id: svn://dunari.cis.vtc.edu/POWER@218 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Design/Hardware/Satellite-Prototyping.tex
+++ b/Documents/Design/Hardware/Satellite-Prototyping.tex
@@ -1,9 +1,9 @@
 %% Template file for all Software/Hardware modules
 
 % Replace "Name of Module" with the name of this module
-\chapter{Satellite Prototype}
+\subsection{Satellite Prototype}
 
-\section{Description}
+\subsubsection{Description}
 
 The purpose of the Satellite is to measure and transmit the voltage,
 and the amount of current being drawn on the particular outlet that 
@@ -11,7 +11,7 @@ the Satellite is plugged into. The module is done this way so that
 the current and voltage can be measured quickly and efficiently.
 
 
-\section{Circuit Diagrams}
+\subsubsection{Circuit Diagrams}
 
 Figure \ref{MeasuringCircuit} shows the layout of the Satellite's 
 measuring hardware. Mains electricity will be run through a current
@@ -28,7 +28,7 @@ The resistor is in place for troubleshooting.
 \label{MeasuringCircuit}
 \end{figure}
 
-\section{Pinout Diagrams}
+\subsubsection{Pinout Diagrams}
 Figure \ref{XBeePinout} shows the pinouts of the XBee modules that
 we will be using. For this project we will be using pins 1, 2, 3, and 10.
 Pin 1 is simply the 3.3V source. Pin 2 is the Data Out and will be 
@@ -43,7 +43,7 @@ Pin 10 is ground.
 \label{XBeePinout}
 \end{figure}
 
-\section{Potential Problems}
+\subsubsection{Potential Problems}
 
 % A list of potentional programs along with suggestions
 %  on ways to work around them. Elaborate on why the problem
