--- a/Documents/Design/Hardware/overview.tex
+++ b/Documents/Design/Hardware/overview.tex
@@ -23,7 +23,7 @@ Figure \ref{SystemOverview} shows the layout of the hardware system.
 \section{The Server}
 \input{Hardware/Server-Hardware}
 \input{Hardware/Server-Addons}
-%\input{Hardware/Server-TalkToXbee}
+\input{Hardware/Server-TalkToXbee}
 \input{Hardware/Server-Problems}
 
 \section{The Satellites}
