--- a/Documents/Design/biblo.bib
+++ b/Documents/Design/biblo.bib
@@ -41,10 +41,10 @@
 }
 
 @INBOOK{Book:ZigBee,
-   title = "The Chicago Manual of Style",
-   publisher = "Building Wireless Sensor Networks: with ZigBee, XBee, Arduino, and Processing ",
-   edition = "fourth",
-   year = 2011,
+   title = "Building Wireless Sensor Networks: A Practical Guide to the ZigBee Mesh Networking Protocol",
+   publisher = "O'Reilly Media, Inc.",
+   edition = "first",
+   year = 2010,
    key = "OReilly",
    author = "Robert Faludi"
 }
