--- a/Documents/Design/definitions.tex
+++ b/Documents/Design/definitions.tex
@@ -15,6 +15,9 @@ The benefit of this is that we don't need to refresh the page, or send extra dat
 The Hypertext Transfer Protocol (HTTP) is an application protocol for distributed, collaborative, hypermedia information systems. 
 HTTP is the foundation of data communication for the World Wide Web.
 
+\paragraph{IEEE 802.15.4}
+A low-power, low-data rate wireless protocol for \ac{PAN}s.
+
 \paragraph{JSON}
 Javsascript Object Notation. 
 JSON is a way of representing objects in a hash-table that is easy to use in the Javascript scripting language. 
@@ -50,3 +53,12 @@ In addition, we can control access and authorization via standard methods handle
 
 \paragraph{Volt (Volts)}
 The SI unit of electromotive force, the difference of potential that would carry one ampere of current against one ohm resistance.
+
+\paragraph{Watt (Watts)}
+The SI unit of energy transfer, defined as one joule per second. Watts, denoted by P, can be calculated by multiplying the Volts and Amps of a given system.
+
+\paragraph{XBee}
+XBee is the name given to small radio modules made by Digi. The XBee radios used in this project are XBee Series 2 radios, which are ZigBee compliant.
+
+\paragraph{ZigBee}
+ZigBee is a standard that uses IEEE 802.15.4 as it's base. XBee Series 2 radios use ZigBee to form an ad-hoc mesh network that can add or remove nodes at any time.
