--- a/Documents/Design/index.tex
+++ b/Documents/Design/index.tex
@@ -89,6 +89,7 @@
 	11/20/12 & <1.3> & Added a script to generate tex from our codes, and found a way to include those in the document. & chathaway\\  \hline
 	11/28/12 & <1.4> & Added a Revision History table. & gdegeus \\ \hline
 	11/29/12 & <1.5> & Added Non-functional Requirements section, added glossary section, re-arranged document layout, updated Introduction, index and Acronyms section. & gdegeus \\  \hline
+	11/30/12 & <1.6> & Updated section 5.2 and added section 5.4, added some definitions, added sources to bibliography & nquimby\\ \hline
 	~    & ~       & ~           & ~      \\  \hline
     \end{tabular}
 
@@ -131,6 +132,7 @@
 	\acro{LCD}{Liquid Crystal Display}
 	\acro{M}{Meters}
 	\acro{NEMA}{National Electrical Manufacturers Association}
+	\acro{PAN}{Personal Area Network}
 	\acro{PIP}{Python package installer}
 	\acro{POST}{Request Method}
 	\acro{POW-R}{Power Outlet Wireless Reporter}
