Added some pictures
git-svn-id: svn://dunari.cis.vtc.edu/POWER@231 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/Documents/Presentation/software.tex
+++ b/Documents/Presentation/software.tex
@@ -34,6 +34,35 @@
  \end{itemize}
 }
 
+\frame{
+ \frametitle{Backend Overview}
+ \begin{center}
+  \includegraphics[width=0.8\textwidth]{Diagrams/ServerDependency.jpg}
+ \end{center}
+}
+
+\frame{
+ \frametitle{Frontend Overview}
+ \begin{itemize}
+  \item RequireJS - Loads all the required modules for each page
+  \begin{enumerate}[A.]
+   \item Helps keep the scope clean
+   \item Enhances modular development
+  \end{enumerate}
+  \item Backbone.js - MVC Architecture on the client-side
+  \item iCanHaz - Provides the 'V' part of MVC
+  \item jqplot - Renders charts and graphs
+  \item jQuery - Deals with all the behind-the-scenes AJAX stuff
+ \end{itemize}
+}
+
+\frame{
+ \frametitle{Frontend Overview}
+ \begin{center}
+  \includegraphics[width=0.8\textwidth]{Diagrams/ClientDependency.jpg}
+ \end{center}
+}
+
 \subsection{Interesting problems}
 
 \frame{
